add userName state and fix some styles

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-@import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
-
 * {
   font-family: 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+input {
+  font-family: 'Helvetica 65 Medium', sans-serif;
 }
 
 input:focus {
