--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+
+  font-family: 'Helvetica 65 Medium', sans-serif;
 }
 
 .form {
